# Remote_Adjust_PID

./: .git-hooks-config.yml  .gitignore  HAL_UART_Demo.c  README.md  pid_adjust.py  pyproject.toml  run.bat  run.sh  test.py  test_filter.py
.git-hooks/: README.md  install-hooks.py  install.bat  install.sh  pre-commit  pre-commit.bat  pre_commit.py
.sisyphus/: boulder.json
.sisyphus/drafts/: param-id-software.md
.sisyphus/evidence/: task-23-cpp-performance.txt  task-23-performance-report.json  task-23-performance-report.txt
.sisyphus/plans/: disconnect-fix.md  param-id-refactor.md
Serial_Draw/: README.md  Serial_Draw.pro  draw_buck.cpp  draw_buck.h  draw_buck.ui  draw_pid.cpp  draw_pid.h  draw_pid.ui  maindrawdynamic.cpp  maindrawdynamic.h  maindrawdynamic.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
cmake/: CMakeLists.txt
filter/: readme.md
filter/on_destop_device/: filter.cpp  filter.h  main.cpp
filter/on_embeded_device/: filter.cpp  filter.h
param_id_gui/: __init__.py  __main__.py  main.py
param_id_gui/algorithms/: __init__.py  lm.py  pso.py
param_id_gui/core/: __init__.py  _core_compat.py  clock.py  data_bus.py  model_registry.py  numeric_utils.py  optimization_service.py  orchestrator.py  simulation_controller.py  simulation_engine.py  types.py
param_id_gui/cpp/include/data/: signal_processing.h
param_id_gui/cpp/include/filters/: filters.h
param_id_gui/cpp/include/math/: matrix.h
param_id_gui/cpp/include/models/: physics_models.h
param_id_gui/cpp/include/optim/: optimizers.h
param_id_gui/cpp/include/solvers/: ode_solvers.h
param_id_gui/cpp/src/: bindings.cpp  ode_solver.cpp
param_id_gui/cpp/src/data/: signal_processing.cpp
param_id_gui/cpp/src/filters/: filters.cpp
param_id_gui/cpp/src/math/: matrix.cpp
param_id_gui/cpp/src/models/: physics_models.cpp
param_id_gui/cpp/src/optim/: optimizers.cpp
param_id_gui/cpp/src/solvers/: ode_solvers.cpp
param_id_gui/data/: __init__.py  hdf5_handler.py
param_id_gui/gui/: __init__.py  main_window.py  theme.py
param_id_gui/gui/panels/: __init__.py  model_config.py  param_id.py  results.py  simulation.py
param_id_gui/gui/widgets/: __init__.py
param_id_gui/models/: __init__.py
param_id_gui/models/controller/: __init__.py  foc.py
param_id_gui/models/motor/: __init__.py  pmsm_dq.py
param_id_gui/models/power/: __init__.py  power_models.py
param_id_gui/utils/: __init__.py  safety.py  validation.py
tests/: __init__.py  conftest.py
tests/benchmark/: __init__.py  test_model_performance.py  test_ode_performance.py  test_orchestrator_performance.py  test_performance.py
tests/integration/: __init__.py  test_disconnect_fix.py  test_dynamic.py  test_workflow.py
tests/manual/: __init__.py  test_data_bus_performance.py
tests/physics/: __init__.py  test_physics.py
tests/security/: __init__.py  test_security.py  test_validation.py
tests/unit/: __init__.py  test_clock.py  test_data_bus.py  test_dcdc_model.py  test_hdf5.py  test_lm.py  test_model_registry.py  test_numeric_utils.py  test_ode_solver.py  test_optimization_service.py  test_orchestrator.py  test_pmsm_model.py  test_project_structure.py  test_pso.py  test_simulation_controller.py  test_types.py
